--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --port 8080",
+    "dev:open": "vite --host --port 8080 --open",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
