--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,12 @@ jobs:
         run: npm ci
         
       - name: Build
-        run: npm run build
+        run: |
+          export NODE_ENV=production
+          echo "Building for production..."
+          npm run build
+          echo "Build complete. Checking dist folder..."
+          ls -la dist/
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
